// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CampaignInfo > Component Snapshots > matches snapshot for empty form 1`] = `
<div>
  <h2>
    Campaign Information
  </h2>
  <div
    class="form-group"
  >
    <label>
      Campaign Name
    </label>
    <input
      class="form-input"
      value=""
    />
  </div>
  <div
    class="form-group"
  >
    <label>
      Website
    </label>
    <input
      class="form-input"
      value=""
    />
  </div>
  <div
    class="form-actions"
  >
    <button
      class="btn btn-secondary"
    >
      Back
    </button>
    <button
      class="btn btn-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`CampaignInfo > Component Snapshots > matches snapshot for populated form 1`] = `
<div>
  <h2>
    Campaign Information
  </h2>
  <div
    class="form-group"
  >
    <label>
      Campaign Name
    </label>
    <input
      class="form-input"
      value="Test Campaign 2024"
    />
  </div>
  <div
    class="form-group"
  >
    <label>
      Website
    </label>
    <input
      class="form-input"
      value="https://test-campaign.org"
    />
  </div>
  <div
    class="form-actions"
  >
    <button
      class="btn btn-secondary"
    >
      Back
    </button>
    <button
      class="btn btn-primary"
    >
      Next
    </button>
  </div>
</div>
`;
